--- a/index.html
+++ b/index.html
@@ -4,35 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
     <title>Carosello News</title>
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
-    <section class="carousel">
-        <!-- Images -->
-        <div class="images">
-            <!-- genera con vue -->
-            <div class="image-container">
-                <img src="./img/01.jpg" alt="Lorem">
-                <div class="text">
-                    <h3>Lorem</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.</p>
+    <div id="app">
+
+        <section class="carousel">
+            <!-- Images -->
+            <div class="images">
+                <!-- genera con vue -->
+                <div class="image-container">
+                    <img :src="slides[activeSlides].image" :alt="slides[activeSlides].title">
+                    <div class="text">
+                        <h3>Lorem</h3>
+                        <p>{{ slides[activeSlides].text }}</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Thumbnails -->
-        <div class="thumbs">
-            <!-- genera con vue  -->
-            <div class="thumb active">
-                <img src="./img/01.jpg" alt="Lorem">
+            <!-- Thumbnails -->
+            <div class="thumbs">
+                <!-- genera con vue  -->
+                <div v-for="(slide, i) in slides" 
+                    class="thumb" 
+                    :class="{active: i === activeSlides}"
+                    @click="activeSlide(i)">
+                    
+                    <img :src="slide.image" alt="Lorem">
+                </div>
+
+                <div @click="prevSlide" class="prev">&uarr;</div>
+                <div @click="nextSlide" class="next">&darr;</div>
             </div>
+        </section>
+    </div>
 
-            <div class="prev">&uarr;</div>
-            <div class="next">&darr;</div>
-        </div>
-    </section>
 
     <script src="./js/main.js"></script>
 </body>
